# bank-system

./: CMakeLists.txt  Clients.txt  LoginRegister.txt  Makefile  README.md  TransferLog.txt  clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsBankClient.h  clsBankClient.h.txt  clsClientListScreen.h  clsCurrency.h  clsCurrencyExchangeMainScreen.h  clsDate.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindUserScreen.h  clsInputValidate.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsManageUsersScreen.h  clsPerson.h  clsScreen.h  clsTotalBalancesScreen.h  clsTransactionScreen.h  clsTransactionsScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsUpdateUserScreen.h  clsUser.h  clsUtil.h  clsWithdrawScreen.h  main  main.cpp
docs/: README.md
include/models/: clsBankClient.h  clsDate.h  clsPerson.h  clsString.h  clsUser.h
include/screens/: clsAddNewClientScreen.h  clsAddNewUserScreen.h  clsClientListScreen.h  clsCurrenciesListScreen.h  clsCurrencyCalculatorScreen.h  clsCurrencyExchangeMainScreen.h  clsDeleteClientScreen.h  clsDeleteUserScreen.h  clsDepositScreen.h  clsFindClientScreen.h  clsFindCurrencyScreen.h  clsFindUserScreen.h  clsListUsersScreen.h  clsLoginRegisterScreen.h  clsLoginScreen.h  clsMainScreen.h  clsManageUsersScreen.h  clsScreen.h  clsTotalBalancesScreen.h  clsTransactionScreen.h  clsTransferLogScreen.h  clsTransferScreen.h  clsUpdateClientScreen.h  clsUpdateCurrencyRateScreen.h  clsUpdateUserScreen.h  clsWithdrawScreen.h
src/: main.cpp  tempCodeRunnerFile.cpp
(+5 files in other folders)
